--- a/fakestore-app/package.json
+++ b/fakestore-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "botstrap": "^0.20.1",
     "install": "^0.13.0",
     "npm": "^11.4.1",
